Add header and hero sections

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link href="styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <h1 class="logo">Header Logo</h1>
+        <ul class="navbar">
+            <li class="navbar-items"><a href="">header link one</a></li>
+            <li class="navbar-items"><a href="">header link two</a></li>
+            <li class="navbar-items"><a href="">header link three</a></li>
+        </ul>
+    </header>
+    <section class="hero">
+        <main class="hero-main">
+            <h2 class="hero-title">This website is awesome</h2>
+            <p class="hero-para">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button class="hero-button">Sign up</button>
+        </main>
+        <div class="img">this is a placeholder for an image</div>
+    </section>
 </body>
 </html>
