Add info section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,26 @@
         </main>
         <div class="img">this is a placeholder for an image</div>
     </section>
+    <section class="info-section">
+        <h2 class="info-title">Some random information.</h2>
+        <div class="img-container">
+        <figure class="info-img-subtext">
+            <div class="info-img"></div>
+            <figcaption class="img-subtext">this is some subtext under an illustration or image</figcaption>
+        </figure>
+        <figure class="info-img-subtext">
+            <div class="info-img"></div>
+            <figcaption class="img-subtext">this is some subtext under an illustration or image</figcaption>
+        </figure>
+        <figure class="info-img-subtext">
+            <div class="info-img"></div>
+            <figcaption class="img-subtext">this is some subtext under an illustration or image</figcaption>
+        </figure>
+        <figure class="info-img-subtext">
+            <div class="info-img"></div>
+            <figcaption class="img-subtext">this is some subtext under an illustration or image</figcaption>
+        </figure>
+    </div>
+    </section>
 </body>
 </html>
