--- a/index.html
+++ b/index.html
@@ -47,5 +47,13 @@
         </figure>
     </div>
     </section>
+    <section class="quote-section">
+        <div class="quote-container">
+        <blockquote class="quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </blockquote>
+        <p class="signature">-Thor, God of Thunder</p>
+    </div>
+    </section>
 </body>
 </html>
