Add call to action section

--- a/index.html
+++ b/index.html
@@ -55,5 +55,14 @@
         <p class="signature">-Thor, God of Thunder</p>
     </div>
     </section>
+    <section class="call-to-action">
+        <div class="call-element">
+         <div class="call-text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+            <button class="call-button">Sign up</button> 
+        </div>
+    </section>
 </body>
 </html>
