Add footer and change main

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             <li class="navbar-items"><a href="">header link three</a></li>
         </ul>
     </header>
+    <main>
     <section class="hero">
-        <main class="hero-main">
+        <div class="hero-main">
             <h2 class="hero-title">This website is awesome</h2>
             <p class="hero-para">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button class="hero-button">Sign up</button>
-        </main>
+        </div>
         <div class="img">this is a placeholder for an image</div>
     </section>
     <section class="info-section">
@@ -64,5 +65,9 @@
             <button class="call-button">Sign up</button> 
         </div>
     </section>
+    </main>
+    <footer>
+        Copyright &copy The Odin Project 2025
+    </footer>
 </body>
 </html>
